--- a/src/js/views/help.html
+++ b/src/js/views/help.html
@@ -1,5 +1,31 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><div class="main-page" style="display: flex; justify-content: center; align-items: center; height: 80vh;">
-<div class="main-page" style="display: flex; justify-content: center; align-items: center; height: 80vh;">
-    <h1>Help Page</h1>
+<link rel="stylesheet" href="../../css/help.css">
+<div class="container">
+    <img src="../../css/images/help-banner.jpg" class="banner-image">
+    <div class="overlay">
+        <p>How can we help you?</p><br>
+        <!-- <oj-input-search id="search1" class="oj-form-control-max-width-md" value="{{value}}" suggestions="[[suggestionsDP]]"
+            placeholder="Search..." aria-label="My search field"></oj-input-search> -->
+    </div>
 </div>
+
+<div class="body-bg">
+<div class="oj-panel oj-flex oj-sm-align-items-center oj-sm-justify-content-center oj-sm-flex-direction-column">
+    <h5  class="text-color-style">Manage Profile</h5>
+    <div class="contents oj-flex oj-sm-justify-content-center" style="width: 100%;">
+        <div class="content oj-flex oj-sm-flex-direction-column">
+            <ul>
+                <li><a id="guideManageAdmin" on-click= "[[goToPage]]">How to audit profile audit sections?</a></li>
+            
+            </ul>
+        </div>
+        <div class="content oj-flex oj-sm-flex-direction-column">
+            <ul>
+<!--                 <li><a id="guideManageStudents%2FguideStudentLog%3Bindex%3D3" on-click= "[[goToPage]]">How to create and manage invoice?</a></li>
+ -->    
+            </ul>
+        </div>
+    </div>
+</div>
+
+</div>
+
